--- a/Forntend/src/index.html
+++ b/Forntend/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/c49e60cdac.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <title>HSPA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
   <app-root></app-root>
